<resources>
    <string name="app_name">My Application</string>
    <string name="NAME">Nom</string>
    <string name="Button">Button</string>
    <string name="Nom">Nom</string>
    <string name="Prenom">Prenom</string>
    <string name="date_de_naissance">date de naissance</string>
    <string name="ville_de_naissance">ville de naissance</string>
    <string name="helloworld">Hello World!</string>


</resources>